--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -1,24 +1,10 @@
-.feedbackOptions {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	padding: 20px;
-	border: var(--line-border);
-}
-
-.header {
-	padding: 20px 0;
-
-	font-size: 36px;
-	line-height: 1.15;
-}
-
 .list {
 	display: flex;
 	justify-content: center;
 
 	padding: 20px;
+	border: var(--line-border);
+	border-radius: 8px;
 }
 
 .item:not(:last-child) {
